--- a/site_django/libro/templates/navbar.html
+++ b/site_django/libro/templates/navbar.html
@@ -12,9 +12,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'listbook' %}" style="color: #5414ff;">Libros</a>
           </li>
+          {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #5414ff;">Acerca de</a>
+            <a class="nav-link" href="{% url 'libro_add' %}" style="color: #5414ff;">Agregar Libros</a>
           </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: #5414ff;">Contacto</a>
           </li>
